Building Classes and Scripts
Major changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
 # Secret Stuff
 *.secret
 
+# Logs
+*.log
+*.pickle
+
+# Backups
+*.old
+
+# Stop Words
+.words
+
 led / optimized / DLL files
 __pycache__/
 *.py[cod]
