Added PyQt5 Controller

--- a/politiprocess/dat/scraper.cfg
+++ b/politiprocess/dat/scraper.cfg
@@ -1,8 +1,30 @@
 
-##Reddit Params
-Red List                      = conservative, republican
-Blue List                     = liberal, democrats
-Scraper Depth Limit           = 30
+##Options
+Set_Local                     = False
+Upsert                        = True
+
+##Reddit_Params
+Red_List                      = ['conservative', 'republican']
+Blue_List                     = ['liberal', 'democrats']
+Scraper_Depth_Limit           = 30
 
 ##Article
-None Article Links            = www.reddit.com, i.reddit.it
+None_Article_Links            = ['www.reddit.com', 'i.reddit.it']
+
+##Pre_Processing
+Fix_Unicode                   = True
+All_Lowercase                 = False
+Remove_Newline                = True
+Remove_Punctuation            = False
+Remove_Contradictions         = False
+Remove_Emails                 = True
+Remove_Accents                = True
+Replace_Currency              = True
+
+##Spacy_Params
+Spacy_Model                   = en
+Min_Word_Length               = 2
+Use_Cleaned_Text              = 1
+Named_Entity_List             = ['PERSON', 'GPE', 'ORG', 'NORP']
+Split_Columns                 = True
+Fix_Stop                      = True
