prep for scripting
getting docker container ready

--- a/politiprocess/dat/scraper.cfg
+++ b/politiprocess/dat/scraper.cfg
@@ -6,7 +6,7 @@ Upsert                        = True
 ##Reddit_Params
 Red_List                      = ['conservative', 'republican']
 Blue_List                     = ['liberal', 'democrats']
-Scraper_Depth_Limit           = 30
+Scraper_Depth_Limit           = 10
 
 ##Article
 None_Article_Links            = ['www.reddit.com', 'i.reddit.it']
@@ -22,9 +22,9 @@ Remove_Accents                = True
 Replace_Currency              = True
 
 ##Spacy_Params
-Spacy_Model                   = en
+Spacy_Model                   = en_core_web_lg
 Min_Word_Length               = 2
 Use_Cleaned_Text              = 1
-Named_Entity_List             = ['PERSON', 'GPE', 'ORG', 'NORP']
+Named_Entity_List             = ['PERSON', 'GPE', 'ORG', 'NORP', 'FACILITY', 'PRODUCT', 'EVENT', 'TIME', 'MONEY']
 Split_Columns                 = True
 Fix_Stop                      = True
