Added Scripts and Split r b
Big update

--- a/politiprocess/dat/scraper.cfg
+++ b/politiprocess/dat/scraper.cfg
@@ -16,10 +16,12 @@ Fix_Unicode                   = True
 All_Lowercase                 = False
 Remove_Newline                = True
 Remove_Punctuation            = False
-Remove_Contradictions         = False
+Remove_Contradictions         = True
 Remove_Emails                 = True
 Remove_Accents                = True
 Replace_Currency              = True
+Remove_Extras                 = True
+Extras                        = ['-', '·', '"', "'", '–', '..', '(', ')', '——', '—', '°', '[', ']', ':', ';', '_', '  ', '   ']
 
 ##Spacy_Params
 Spacy_Model                   = en_core_web_lg
